--- a/src/data/grammar/images/mtg-single-card-callout.yaml
+++ b/src/data/grammar/images/mtg-single-card-callout.yaml
@@ -6,8 +6,45 @@ singleCardImageTest: >
 
 # Include this in other headlines that set a single _cardname variable
 singleCardImage: >
-  #pickRandomBGText# #pickFgBgColors# #pickRandomDegree#
-  {htmlImg htmlImgString=`#singleCardHtml#` screenWidth=`660` screenHeight=`330`}
+  #pickRandomBGText# #pickFgBgColors# #pickRandomDegree# #pickOrientation#
+  {htmlImg htmlImgString=`#singleCardHtml#` screenHeight=`330`}
+
+
+_overlayImageDirPath: "./src/data/images/cardcallout"
+
+_overlayImageIndex:
+- "1"
+- "2"
+- "3"
+- "4"
+- "5"
+- "6"
+- "7"
+- "8"
+- "9"
+- "10"
+- "11"
+- "12"
+- "13"
+- "14"
+- "15"
+- "16"
+- "17"
+- "18"
+- "19"
+- "20"
+- "21"
+- "22"
+- "23"
+- "24"
+- "25"
+- "26"
+- "27"
+- "28"
+- "29"
+- "30"
+- "31"
+- "32"
 
 pickFgBgColors:
   - "[_setFgColor:#rgbOverlay#][_setBgColor:#rgbDark#]"
@@ -15,12 +52,24 @@ pickFgBgColors:
 pickRandomBGText: >
   [_bgText:#randomBgText#]
 
+pickOrientation:
+- "[_cardImgFloat: left][_overlayFlipTransform: scaleX(1)]"
+- "[_cardImgFloat: right][_overlayFlipTransform:  scaleX(-1)]"
+
 rgbOverlay:
   - "rgba(255, 255, 255, 0.1)"
   - "rgba(0, 0, 0, 0.4)"
 
 rgbDark:
-  - "rgb(#num11-99#, #num11-99#, #num11-99#)"
+  - "rgb(1#num0-9#, #num11-99#, #num40-99#)"
+  - "rgb(1#num0-9#, #num40-99#, #num11-99#)"
+  - "rgb(1#num0-9#, #num40-99#, #num40-99#)"
+  - "rgb(#num11-99#, 1#num0-9#, #num40-99#)"
+  - "rgb(#num40-99#, 1#num0-9#, #num11-99#)"
+  - "rgb(#num40-99#, 1#num0-9#, #num40-99#)"
+  - "rgb(#num11-99#, #num40-99#, 1#num0-9#)"
+  - "rgb(#num40-99#, #num11-99#, 1#num0-9#)"
+  - "rgb(#num40-99#, #num40-99#, 1#num0-9#)"
 
 randomBgText:
   - "Hasbro ©2017 Hasbro ©2017 Hasbro ©2017 [_lineHeight:.9em][_debug:hasbro]"
@@ -32,7 +81,6 @@ randomBgText:
   - "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@[_lineHeight:1em][_debug:at]"
   - "😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈😈[_lineHeight:1.3em][_debug:demon]"
   - "👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀👀[_lineHeight:1.3em][_debug:eyes]"
-  - "🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔[_lineHeight:1.3em][_debug:thinking]"
   - "🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥[_lineHeight:1.3em][_debug:fire]"
   - "❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤❤[_lineHeight:1.3em][_debug:heart]"
   - "😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎😎[_lineHeight:1.3em][_debug:cool]"
@@ -42,6 +90,7 @@ randomBgText:
   - "💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖💖[_lineHeight:1.3em][_debug:starheart]"
   - "💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯💯[_lineHeight:1.3em][_debug:100]"
   - "⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐⭐[_lineHeight:1.3em][_debug:medium-star]"
+  # - "🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔🤔[_lineHeight:1.3em][_debug:thinking]"
 
 pickRandomDegree: >
   [_rotationDeg:#_randomDegree#deg]
@@ -80,6 +129,8 @@ singleCardHtml: |
       }
       .color-bg {
         background-color: #_setBgColor#;
+        width:100%;
+        height:100%;
       }
       .color-fg {
         color: #_setFgColor#;
@@ -108,7 +159,7 @@ singleCardHtml: |
       .single-card {
         background-color: black;
         height: 330px;
-        width: 660px;
+        width: 570px;
         overflow: hidden;
         border: 0px;
         line-height: 1.3em;
@@ -117,14 +168,25 @@ singleCardHtml: |
       }
       .text-container {
         height: 330px;
-        width: 660px;
+        width: 570px;
         position: absolute;
         overflow: hidden;
       }
       .image-wrap {
-        width: 100%;
         position: relative;
+        margin-left: 10px;
+        margin-right: 10px;
+        float: #_cardImgFloat#;  
       }
+      div.image-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+      img.image-overlay {
+        -webkit-transform: #_overlayFlipTransform#;
+        opacity: 0.8;
+      }    
       .col-100 { width: 100%; }
     </style>
   </head>
@@ -135,12 +197,14 @@ singleCardHtml: |
           <div class="text-bg color-fg">
             #bgTextBlock#
           </div>
+          <div class="bgtext-debug-key" hidden>#_debug#</div>          
         </div>
+        <div class="image-overlay">
+          <img class="image-overlay" src="#_overlayImageDirPath#/overlay#_overlayImageIndex#.png"/>
+        </div>        
         <div class="image-wrap">
-          <center>
-            <img class="mtg-card" src="https://goodgamery.com/api/mtg/image?card=#_cardname#" />
-          </center>
-        </div>
+          <img class="mtg-card" src="https://goodgamery.com/api/mtg/image?card=#_cardname#" />
+        </div>        
       </div>
     </div>
   </body>
