--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jimp": "0.2.28",
     "js-yaml": "3.9.1",
     "lodash.merge": "4.6.0",
+    "mastodon": "^1.2.1",
     "request": "2.81.0",
     "svg2png": "4.1.1",
     "twit": "2.2.9",
