--- a/src/data/grammar/headlines/mtg-gatherer.yaml
+++ b/src/data/grammar/headlines/mtg-gatherer.yaml
@@ -1,6 +1,6 @@
 {
     "gatherer": [
-         "[_cardname:#realCard#]#gathererIntro# #gathererTimestamp# #_cardname# — #gathererText.capitalize#"
+         "[_cardname:#randomRealCard#]#gathererIntro# #gathererTimestamp# #_cardname# — #gathererText.capitalize#"
     ],
     "gathererIntro": [
         "GATHERER RULINGS:",
@@ -19,7 +19,7 @@
     "gathererRuling": [
         "the #singularNoun# continues to #verbIntransitive# after #_cardname# has left the battlefield.",
         "the artist is actually #person#.",
-        "this is the [_shift:timeshifted,colorshifted,playtest,Space#colon# the Convergence,good]#_shift# version of #realCard#.",
+        "this is the [_shift:timeshifted,colorshifted,playtest,Space#colon# the Convergence,good]#_shift# version of #randomRealCard#.",
         "when the #xth# ability resolves, the #cardCategory# you [_put:put, don't put]#_put# #cardLocation# stays #cardLocation#.",
         "…finally, #_cardname# is placed #cardLocation#. This is a state-based action.",
         "#_cardname.s# are #cardLocation# regardless of whether they're #cardState# or #cardState#.",
@@ -30,7 +30,7 @@
         "#_cardname#'s first and third abilities are linked. Similarly, #_cardname#'s second and third abilities are linked.",
         "the #creatureTypes# tokens are created even if [_circumstance:the target isn't,no #cardCategory.s# are]#_circumstance# [#gameEffectAction#]#_actionPastTense# by #_cardname#'s ability.",
         "for more information on [_topic:#gameConcept#,#cardCategory.s#,#_randomTopic#]#_topic#, see the [_set:#cardSet#,#teaserCardSet#]#_set# mechanics article at <a href=\"\">#_gathererRulingImageArticleUrl#</a>.",
-        "[_card2:#realCard#][_card3:#cardAlone#]In a Commander game, your commander may be #_cardname# or #_card2#, and the other may be in your deck. If they meld into #_card3#, #_card3# will also be your commander.",
+        "[_card2:#randomRealCard#][_card3:#cardAlone#]In a Commander game, your commander may be #_cardname# or #_card2#, and the other may be in your deck. If they meld into #_card3#, #_card3# will also be your commander.",
         "#opalPart1#",
         "your #cardCategory.s# can help cast this spell.",
         "#gathererTextRare#"
@@ -61,7 +61,7 @@
         "#gathererRuling# This may be wrong."
     ],
 
-    "opalPart1": "[_card2:#realCard#][_card3:#cardAlone#]this is the current interaction between #_cardname# and #_card2#: The type-changing effect applies at #rulesLayer#[_part2:.,#opalPart2#]#_part2#",
+    "opalPart1": "[_card2:#randomRealCard#][_card3:#cardAlone#]this is the current interaction between #_cardname# and #_card2#: The type-changing effect applies at #rulesLayer#[_part2:.,#opalPart2#]#_part2#",
     "opalPart2": "[_optional1:, but the rest happens in the applicable layers]#_optional1#.[_optional2: The rest of it will apply even if the #cardCategory# loses its ability before it’s finished applying.]#_optional2# So if #_cardname#, #_card2#, and #_card3# are [_opalZone:#cardLocation#]#_opalZone# [_optional3: and #_cardname# was #_opalZone# before #_card2#]#_optional3#, [_part3:#gathererRuling#,the following is true#colon# #opalPart3#]#_part3#",
     "opalPart3": "#opalLayerEffectStack#[_part4:, #opalPart4#]#_part4#",
     "opalPart4": "But if #_card2# was #_opalZone# before #_cardname#, the following is true: #opalLayerEffectStack#", 
