--- a/src/data/grammar/mtg/cards/mtg-cards.yaml
+++ b/src/data/grammar/mtg/cards/mtg-cards.yaml
@@ -1,4 +1,9 @@
 {
+  randomAnyCard: [
+    "#card#",
+    "[#CARDFINDER.randomCard#]#_cardName1#"
+  ],
+
   randomRealCard: [
     "#realCard#",
     "[#CARDFINDER.randomCard#]#_cardName1#"
