--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -37,21 +37,21 @@ flavorArcana:
 - 'FLAVOR FLASHBACK: #flavorText#'
 
 clickbait:
-- Are you [_verbing:overrating,underrating]#_verbing# [_thing:#gameConcept#,#card#,#deckArchOrCategory#,#creatureTypes.s#,#cardSet#]#_thing#?
+- Are you [_verbing:overrating,underrating]#_verbing# [_thing:#gameConcept#,#randomAnyCard#,#deckArchOrCategory#,#creatureTypes.s#,#cardSet#]#_thing#?
 - "[interrogative:Why,How]#interrogative# #pro# is #verbDefeating.capitalize# #nouns.capitalize#"
 - "#count.capitalize# [_thing:#cardCategory.s#,#creatureTypes.s#,#cardSet# Cards,#format#
   Cards]#_thing.capitalize# [reprinted:That Need to be Reprinted,We'd Love to See
   Reprinted in #teaserCardSet#]#reprinted#"
 - "#count.capitalize# #cardCategory.s# from #teaserCardSet# leaked"
-- "#format# Banwatch: #card#"
-- 'Have You Considered? [_consider:#card# in #format#,#deck#]#_consider.capitalize#'
+- "#format# Banwatch: #randomCardAlone.capitalize#"
+- 'Have You Considered? [_consider:#randomAnyCard# in #format#,#deck#]#_consider.capitalize#'
 - "#pro# [_picked:First Picked,Last Picked,Wheeled,Drafted,Topdecked,Morphed]#_picked#
-  #card.capitalizeAll#[_challenge: and You Won't Believe,. You'll Be Floored By,.
+  #randomAnyCard.capitalizeAll#[_challenge: and You Won't Believe,. You'll Be Floored By,.
   Guess,. Find Out,. #pros.capitalizeAll# are still talking about#]#_challenge# [_what:What
   Happened Next,What #pro.capitalize# Said Next,What #pro.capitalize# Did Next,Why
   #pro.capitalize# Called a Judge]#_what#"
 - 'PICTURES: #pro.capitalize#''s [_cosplayAdj:amazing,convincing,elaborate,unconventional]#_cosplayAdj#
-  cosplay of [_who:#cardAlone#,#character#]#_who#'
+  cosplay of [_who:#randomCardAlone#,#character#]#_who#'
 - 'New preview card from #teaserCardSet#! Is it #descriptor.a# #realPowerfulCard#?'
 - "[_opener:SHOCKER!,Unbelievable!,Rumor#colon#,BREAKING#colon#,It's true#colon#,UPDATE#colon#]#_opener#
   #pro# [_rule:petitioned,solicited,approached,contacted,called out]#_rule# by #wackyCharacter#
@@ -118,7 +118,7 @@ novelSetGraphicAnnouncement:
 
 realization:
 - "#realize#"
-- The Importance of [_thing:#card#,#cardCategory.s#,#creatureTypes.s#,#gameConcept#]#_thing#
+- The Importance of [_thing:#randomAnyCard#,#cardCategory.s#,#creatureTypes.s#,#gameConcept#]#_thing#
   in [_where:#format#,#recentCardSet#]#_where#
 - 'The Secret to #improvementGoal.capitalizeAll# is #deckChange.capitalize#'
 - 'In today''s Magic Story: #character#''s #adj# history with #character# finally
@@ -131,8 +131,8 @@ realization:
 realize: "#pros.capitalize# don't realize that #techPlural# #verbDefeat# #obstacle#"
 
 tournamentNews:
-- 'Emergency Banning: #card.capitalize# Banned in #format#'
-- "#card.capitalize# Banned in #format.capitalizeAll# After [winner:#deck#,#pro#]#winner.capitalizeAll#
+- 'Emergency Banning: #randomCardAlone.capitalize# Banned in #format#'
+- "#randomCardAlone.capitalize# Banned in #format.capitalizeAll# After [winner:#deck#,#pro#]#winner.capitalizeAll#
   Wins #tournament.capitalizeAll#"
 - "#tournamentRound#: #pro# vs. [_opp:#otherPersonality#,Evil #pro#,Cyborg #pro#,Baby
   #pro#,Bizarro #pro#,Dr. #pro# M.D.,a Cardboard Cutout of #pro#,#adj.a# #creatureTypes#]#_opp.capitalizeAll#"
@@ -142,7 +142,7 @@ tournamentNews:
 - '#pro#, after winning #event# with #deckVariation#: "It''s #deckDescription#."'
 - "[_rule:SHOCKER!,BREAKING#colon#,TOURNAMENT UPDATE#colon#,,,,]#_rule# #pro# has
   been [_rule:DQ'd,suspended,disqualified]#_rule# from #event# for #disqualifyingAction#"
-- "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #card# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
+- "Match highlight: #pro# [_defeats:edges out,beats,defeats,routs]#_defeats# #pro# with #randomAnyCard# in round #count# to [_getAhead:lock up,advance in,take down]#_getAhead# #event#"
 
 disqualifyingAction:
 - reading every card's flavor text out loud
@@ -159,13 +159,13 @@ disqualifyingAction:
 - repeatedly using the phrase "Now THAT'S what I call Magic!"
 
 tip:
-- 'The Case for #suggestion.capitalizeAll# [_bannedThing:#card#,#gameConcept#]#_bannedThing.capitalizeAll#[_where:
+- 'The Case for #suggestion.capitalizeAll# [_bannedThing:#randomAnyCard#,#gameConcept#]#_bannedThing.capitalizeAll#[_where:
   in #format#,]#_where#'
 - "#tipTitle#: Improve Your #deckObjective.capitalizeAll# by #deckChange.capitalizeAll#"
 - "#tipTitle#: #deckChange.capitalize# is #adj.a# idea, [_says:Says,Reports]#_says#
   #pro#"
-- "[_title:#tipTitle#,#pro#]#_title.capitalize#: [_replacement:#card# can replace
-  #cardAlone#,#cardCategory.s# can replace #cardCategory.s#]#_replacement.capitalize#
+- "[_title:#tipTitle#,#pro#]#_title.capitalize#: [_replacement:#randomAnyCard# can replace
+  #randomCardAlone#,#cardCategory.s# can replace #cardCategory.s#]#_replacement.capitalize#
   in #format#"
 - "#tipTitle#: #improvementGoal.capitalize# by #deckChange#"
 - "[_improve:Improve,Increase,Pump up,Raise,Augment]#_improve# your collection's resale
@@ -190,12 +190,12 @@ stupidSolution:
 
 tipMoney:
 - "#titleMoney#: Spend more money on #thing#"
-- "#titleMoney#: #investType# #card# #investReason#"
-- "#titleMoney#: #investType# #card#"
+- "#titleMoney#: #investType# #randomAnyCard# #investReason#"
+- "#titleMoney#: #investType# #randomAnyCard#"
 - "#titleMoney#: #pro# is #investType#ing #broadCardClassification.capitalizeAll#;
   Should You?"
-- 'BREAKING: Prices of #card# Spiking; Market Cornered by #pros#'
-- 'Leaked: Team #team#''s new deck #deckLocation#s #card#, invest now'
+- 'BREAKING: Prices of #randomCardAlone# Spiking; Market Cornered by #pros#'
+- 'Leaked: Team #team#''s new deck #deckLocation#s #randomAnyCard#, invest now'
 
 decktech:
 - 'Deck Tech: #deckVariation#'
@@ -210,7 +210,7 @@ playguide:
 - "#count.capitalize# #broadCardClassification.capitalizeAll# That Should Never Have
   Been [_verbed:Printed,Banned,Unbanned,Played,Ignored]#_verbed#"
 - "[_proReveals:Top Pro #revealVerb.s#,#pro# #revealVerb.s#,#pros# #revealVerb#]#_proReveals.capitalizeAll#
-  #planNoun.capitalize# for #event#: Play #card# in #deck# to counter [_what:#card#,#deckArchOrCategory#]#_what#"
+  #planNoun.capitalize# for #event#: Play #randomAnyCard# in #deck# to counter [_what:#randomCardAlone#,#deckArchOrCategory#]#_what#"
 - "#recentCardSet# [_format:Limited,Constucted]#_format# Set Review:[_color: #basicColors.capitalize#,]#_color#
   #cardCategory.s.capitalizeAll# and [_other:#cardCategory#,#creatureTypes#]#_other.s.capitalizeAll#"
 - "#recentCardSet# #format# Set Review: [_cat:#basicColors#,#cardCategory.s# and #cardCategory.s#]#_cat.capitalizeAll#"
@@ -230,7 +230,7 @@ investType:
 - Sell
 
 investReason:
-- 'Before #card# is [_fate:Banned,Restricted][_in: in #format#,]#_fate##_in#'
+- 'Before #randomCardAlone# is [_fate:Banned,Restricted][_in: in #format#,]#_fate##_in#'
 - 'Before #cardSet# [_fate:Rotates,is Released,Arrives on MTGO]#_fate#'
 
 itemOrCreatureType:
@@ -271,12 +271,12 @@ titleMoney:
 - MAGIC FINANCE
 
 deckChange:
-- 'adding [_what:#card#,#card#,#card#,#cardCategory.s#]#_what# to the #deckLocation#'
-- maindecking [_what:#card#,#cardCategory.s#]#_what#
-- 'sideboarding #card#'
-- removing [_what:#card#,#cardCategory.s#]#_what#
-- 'including #cardCopyCount# #cardAlone#'
-- 'cutting #card# for #card#'
+- 'adding [_what:#randomAnyCard#,#randomAnyCard#,#randomAnyCard#,#cardCategory.s#]#_what# to the #deckLocation#'
+- maindecking [_what:#randomAnyCard#,#cardCategory.s#]#_what#
+- 'sideboarding #randomAnyCard#'
+- removing [_what:#randomAnyCard#,#cardCategory.s#]#_what#
+- 'including #cardCopyCount# #randomAnyCard#'
+- 'cutting #randomCardAlone# for #randomAnyCard#'
 - using all foils
 - using only misprint cards
 
@@ -323,7 +323,7 @@ improvementGoal:
 
 thing:
 - "#deckArchOrCategory#"
-- "#card#"
+- "#randomAnyCard#"
 - "#format#"
 - "#cardCategory.s#"
 
