--- a/src/data/grammar/images/mtg-single-card-callout.yaml
+++ b/src/data/grammar/images/mtg-single-card-callout.yaml
@@ -1,6 +1,6 @@
 ---
 singleCardImageTest: >
-  [_cardname:#card#]
+  [_cardname:#randomRealCard#]
   Your card is #_cardname#.
   #singleCardImage#
 
