--- a/src/data/grammar/mtg/community/mtg-pros.yaml
+++ b/src/data/grammar/mtg/community/mtg-pros.yaml
@@ -130,7 +130,7 @@
   ],
   "jokeTeam":  [
     "#creatureTypes.capitalize#",
-    "#cardAlone.noPunctuation.capitalizeAll.noSpaces#",
+    "#randomCardAlone.noPunctuation.capitalizeAll.noSpaces#",
     "#website#",
     "#adj.capitalizeAll.noPunctuation.noSpaces#Card",
   ],
