Random cards from cardfinder; more gatherer rulings (#175)
* small reorg

* randomcard rule

* randomRealCard and randomCardAlone tags

* updating #card#, #cardAlone#, and #realCard# usages to include cardfinder, part 1

* updating card rule usages to include cardfinder, part 2

* more gatherer rulings variations

--- a/src/data/grammar/headlines/cardCallout.yaml
+++ b/src/data/grammar/headlines/cardCallout.yaml
@@ -1,10 +1,6 @@
 ---
 cardCallout:
-- "[#cardCalloutCard#]#cardCalloutText# #_cardname#.#singleCardImage#"
-
-cardCalloutCard:
-- "[_realCard:#realCard#][_cardname:#_realCard#]"
-- "[#CARDFINDER.randomCard#][_cardname:#_cardName1#]"
+- "[_cardname:#randomRealCard#]#cardCalloutText# #_cardname#.#singleCardImage#"
 
 cardCalloutText:
 - "WE'RE NOT WRONG: The card you're thinking of is"
