--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "MTG News Robot",
   "author": "Mark Diehr <mdiehr@gmail.com> (https://www.goodgamery.com)",
-  "main": "src/news-engine.js",
+  "main": "mtgnews",
   "scripts": {
     "start": "node --harmony mtgnews",
     "print": "node --harmony mtgnews",
@@ -17,7 +17,7 @@
     "jimp": "0.2.28",
     "js-yaml": "3.9.1",
     "lodash.merge": "4.6.0",
-    "mastodon": "^1.2.1",
+    "mastodon-api": "1.3.0",
     "request": "2.81.0",
     "svg2png": "4.1.1",
     "twit": "2.2.9",
@@ -32,23 +32,24 @@
     "gulp-eslint": "4.0.0",
     "gulp-jsonlint": "1.2.0",
     "gulp-util": "3.0.8",
-    "gulp-yaml-validate": "^1.0.2",
+    "gulp-yaml-validate": "1.0.2",
     "json-schema-traverse": "0.3.1",
     "run-sequence": "2.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mdiehr/mtgnewsbot.git"
+    "url": "git+https://github.com/GoodGamery/mtgnewsbot.git"
   },
   "keywords": [
     "Robot",
-    "Twitter"
+    "Twitter",
+    "Mastodon"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mdiehr/mtgnewsbot/issues"
+    "url": "https://github.com/GoodGamery/mtgnewsbot/issues"
   },
-  "homepage": "https://github.com/mdiehr/mtgnewsbot#readme",
+  "homepage": "https://github.com/GoodGamery/mtgnewsbot#readme",
   "eslintConfig": {
     "extends": "eslint:recommended",
     "parserOptions": {
@@ -78,5 +79,6 @@
   },
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "false": {}
 }
