--- a/src/data/grammar/headlines/components/terminating-wordlists.yaml
+++ b/src/data/grammar/headlines/components/terminating-wordlists.yaml
@@ -3,7 +3,7 @@
   "winWord": [
       "wins","triumphs","victorious","crushes","dominates","absolutely destroys"
   ],
-  "suggestion": ["banning","improving","reconsidering", "nerfing"],
+  "mtgOpinionSuggestion": ["banning", "improving", "reconsidering", "nerfing", "bolstering", "strengthening", "weakening", "questioning", "ignoring", "disregarding", "doubling-down on", "reevaluating", "reconceptualizing"],
   "descriptor": [
       "more powerful",
       "better",
