--- a/src/data/grammar/grammar.yaml
+++ b/src/data/grammar/grammar.yaml
@@ -121,11 +121,16 @@ realization:
 - The Importance of [_thing:#randomAnyCard#,#cardCategory.s#,#creatureTypes.capitalize.s#,#gameConcept#]#_thing#
   in [_where:#format#,#recentCardSet#]#_where#
 - 'The Secret to #improvementGoal.capitalizeAll# is #deckChange.capitalize#'
-- "In today's Magic Story: #character#'s #adj# [_past:past,history,backstory,rivalry,partnership]#_past# with #character# finally
-  [_verbed:revealed,explained,uncovered,divulged]#_verbed#"
+- "[_leadIn:In today's Magic Story,Magic Arcana,Exploring the Story,Story Time,Story Hour]#_leadIn#: 
 - "#pro# Video Series: How I would [_change:improve,fix]#_change# [_improvable:Magic#colon# the Gathering,Magic Online,#format#,competitive Magic,#tournamentType# attendance]#_improvable# by #mtgOpinionSuggestion# #thing#, Part #num2-9#"
 - 'Preview of #teaserCardSet# #normalFormat#: will the new #deckVariation# deck be
   #deckDescription#?'
+
+magicStorylineHighlight:
+- "#character#'s #adj# [_past:past,history,backstory,rivalry,partnership]#_past# with #character# finally  [_verbed:revealed,explained,uncovered,divulged,explored,exposed]#_verbed#"
+- "#character# and the [_encounter:#adjStorybook# #concreteNoun#,#adjStorybook# #characterClass#, #count# #adjStorybook# #characterClass.s#, #count# #adjStorybook# #itemNoun.s#, #adjStorybook# #creatureTypes#, #count# #adjStorybook# #creatureTypes.s#]#_encounter.capitalizeAll#"
+
+
 
 realize: "#pros.capitalize# don't realize that #techPlural# #verbDefeat# #obstacle#"
 
